# rust_starter_webapp_local

./: .gitignore  Cargo.toml  README.md  data.db
sql_files/: create.sql  drop.sql
src/: data.rs  main.rs  web.rs
www/: index.handlebars
