[package]
name = "small_app"
version = "0.1.0"
authors = ["Carl Fredrik Samson <cf@samson.no>"]
edition = "2018"

[dependencies]
rouille = "3.6.1"
handlebars = "4.3.5"
rusqlite = { version = "0.28.0", features = ["bundled"] }
chrono = "0.4.23"
serde_json = "1.0.87"
serde = { version = "1.0.147", features = ["derive"] }
